Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105506

Inconsistent mix of numerals in calendar with Arabic

XMLWordPrintable

    • All
    • ab52e47820 (qt/qtdeclarative/dev) ab52e47820 (qt/tqtc-qtdeclarative/dev)

      MonthGrid is used to create calendar system. When switch to Ar locale, it shows inconsistent mix of numerals in calendar. All numbers are displayed in English Gregorian but texts are all in Arabic.
      This works with Ja, Ko, Zh-Hk, zh-TW, He, Th, de-CH, Pt-PT, Et etc.
      Attached example when you click you console displays in Arabic but calendar dates are in English.

        For Gerrit Dashboard: QTBUG-105506
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes