tests/auto/qml/qqmlvaluetypeproviders/data/structuredValueTypes.qml
@@ -15,7 +15,7 @@ MyTypeObject {
     property constructible c3
     property constructible c4
 
-    property list<point> ps: [{x: 1, y: 2}, {x: 3, y: 4}, {x: 55, y: Qt.locale()}]
+    property list<point> ps: [{x: 1, y: 2}, {x: 3, y: 4}, {x: 55, y: Qt.locale("en_AU")}]
     property list<size> ss: [{width: 5, height: 6}, {width: 7, height: 8}, {height: 99}]
     property list<constructible> cs: [1, 2, 3, 4, 5, {}]
 
